--- a/sample.html
+++ b/sample.html
@@ -22,7 +22,7 @@
         <section class="banner">
             <div class="banner-centent">
                 <h1 class="banner-content h1">Get Delicious Food Anytime</h1>
-                <p class="banner-content p">Eat Smart & Healthy</p>
+                <p class="banner-content p">Eat Smart</p>
 
                 <div class="banner-actions">
                     <button class="custom-button">View Menu</button>
