Fix typo in delivery and payment link text

--- a/sample.html
+++ b/sample.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="#wcuSection">Why Choose Us?</a></li>
                 <li><a href="#exploreMenuSection">Explore Menu</a></li>
-                <li><a href="#deliveryPaymentSection">Delivery & Payment</a></li>
+                <li><a href="#deliveryPaymentSection">Delivery and payment</a></li>
                 <li><a href="#followUsSection">Follow Us</a></li>
             </ul>
         </nav>
